# osgLab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
models/: node.h  stateset.h  typedef.h
shaders/: viewer_light.h
